--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>aula</title>
+    <title>Aula Primeiro A</title>
     <link rel="stylesheet" href="estilo.css">
   </head>
   <body>
-    <h1>aluno:nicolas</h1>
-    <h2>turma:1A</h2>
+    <h1>Nicolas</h1>
+    <h2> Turma: Primeiro A</h2>
+    <div class="caixa1">
+      conteúdo da caixa 1
+
+    </div>
+    <div class="caixa2">
+      conteúdo da caixa 2
+      :D
+    </div>
   </body>
 </html>
