--- a/index.html
+++ b/index.html
@@ -7,14 +7,22 @@
     <link rel="stylesheet" href="estilo.css">
   </head>
   <body>
+    <div class="menuPrincipal">
+      <nav>
+          <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="pagina01.html">Página 01</a></li>
+              <li><a href="pagina02.hyml">Página 02</a></li>
+          </ul>
+      </nav>
     <h1>Nicolas</h1>
     <h2> Turma: Primeiro A</h2>
     <div class="caixa1">
-      conteúdo da caixa 1
+      conteúdo 1
 
     </div>
     <div class="caixa2">
-      conteúdo da caixa 2
+      conteúdo  2
       :D
     </div>
   </body>
