--- a/pagina02.html
+++ b/pagina02.html
@@ -9,7 +9,17 @@
 </head>
 <body>
     <div>
+        <div class="menuPrincipal">
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="pagina01.html">Página 01</a></li>
+                    <li><a href="pagina02.hyml">Página 02</a></li>
+                </ul>
+            </nav>
         
     </div>
+    <div class="caixapassaro"></div>
+    <img id="passat" src="passat.png" alt="">
 </body>
 </html>
