--- a/index.html
+++ b/index.html
@@ -17,13 +17,9 @@
       </nav>
     <h1>Nicolas</h1>
     <h2> Turma: Primeiro A</h2>
-    <div class="caixa1">
-      conteúdo 1
-
-    </div>
-    <div class="caixa2">
-      conteúdo  2
-      :D
+    <div class="rodape">
+      <p>Melhores carros  </p>
+      
     </div>
   </body>
 </html>
