--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
               <li><a href="pagina02.hyml">Página 02</a></li>
           </ul>
       </nav>
-    <h1>Nicolas</h1>
-    <h2> Turma: Primeiro A</h2>
+    <h1>TOP carros mais bonitos</h1>
+    <h2> Carros são meios de transportes bem úteis no nosso dia a dia. Mas já faz tempo que o modelo e estilo dos veículos chamam a atenção entre os consumidores. 
+
+      É por isso que, independentemente do uso, vários fatores estéticos chamam a atenção de quem é apaixonado por veículos. Considerar um carro bonito, pode variar bastante de acordo com o gosto das pessoas. Afinal, algumas gostam de modelos esportivos, e outras podem, por exemplo, preferir um sedan. 
+      </h2>
     <div class="rodape">
       <p>Melhores carros  </p>
       
