--- a/index.html
+++ b/index.html
@@ -12,17 +12,12 @@
           <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="pagina01.html">Página 01</a></li>
-              <li><a href="pagina02.hyml">Página 02</a></li>
+              <li><a href="pagina02.html">Sedans</a></li>
           </ul>
       </nav>
-    <h1>TOP carros mais bonitos</h1>
-    <h2> Carros são meios de transportes bem úteis no nosso dia a dia. Mas já faz tempo que o modelo e estilo dos veículos chamam a atenção entre os consumidores. 
-
-      É por isso que, independentemente do uso, vários fatores estéticos chamam a atenção de quem é apaixonado por veículos. Considerar um carro bonito, pode variar bastante de acordo com o gosto das pessoas. Afinal, algumas gostam de modelos esportivos, e outras podem, por exemplo, preferir um sedan. 
-      </h2>
-    <div class="rodape">
-      <p>Melhores carros  </p>
-      
-    </div>
+    <h1></h1>
+    <h1>Nicolas</h1>
+    <h2>Série:1_A </h2>
+    <h3>Número:26</h3>
   </body>
 </html>
