--- a/pagina01.html
+++ b/pagina01.html
@@ -13,9 +13,18 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="pagina01.html">Página 01</a></li>
-                <li><a href="pagina02.hyml">Página 02</a></li>
+                <li><a href="pagina02.hyml">Sedans</a></li>
             </ul>
         </nav>
+        <h1>TOP carros mais bonitos</h1>
+        <h2> Carros são meios de transportes bem úteis no nosso dia a dia. Mas já faz tempo que o modelo e estilo dos veículos chamam a atenção entre os consumidores. 
+
+            É por isso que, independentemente do uso, vários fatores estéticos chamam a atenção de quem é apaixonado por veículos. Considerar um carro bonito, pode variar bastante de acordo com o gosto das pessoas. Afinal, algumas gostam de modelos esportivos, e outras podem, por exemplo, preferir um sedan.</h2>
+            <h3>(minha opinião)</h3>
+            <div class="rodape">
+                <p>Melhores carros  </p>
+                
+              </div>
 
     </div>
 </body>
