--- a/pagina02.html
+++ b/pagina02.html
@@ -14,7 +14,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="pagina01.html">Página 01</a></li>
-                    <li><a href="pagina02.hyml">Página 02</a></li>
+                    <li><a href="pagina02.html">Sedans</a></li>
                 </ul>
             </nav>
         
